<resources>
    <string name="app_name">Backlog</string>
    <string name="title_nav_search">Search</string>
    <string name="title_nav_library">Library</string>
    <string name="title_nav_backlog">Backlog</string>
    <string name="title_nav_statistics">Stats</string>
    <string name="hint_search_edit_text">Enter Game Search</string>
    <string name="game_cover_content_description">Image of the game\'s cover</string>
    <string name="game_detail_summary_label">Summary</string>
    <string name="backlog_position_message_prefix">Position in Backlog: </string>
    <string name="date_complete_message_prefix">Game Completed on: </string>
    <string name="library_message_prefix">Added to Library on: </string>
    <string name="add_to_library_button">Add to Library</string>
    <string name="remove_from_library_button">Remove from Library</string>
    <string name="remove_from_backlog_button">Remove from Backlog</string>
    <string name="add_to_backlog_button">Add to Backlog</string>
    <string name="screenshot_content_description">A screenshot of this game.</string>
    <string name="title_statistics">Backlog Statistics</string>
    <string name="stats_game_total_label">Games in Library:</string>
    <string name="stats_complete_total_label">Games Completed</string>
    <string name="stats_backlog_total_label">Games in Backlog</string>
    <string name="currently_playing_label">Currently Playing</string>
    <string name="date_added_prefix">Added:</string>
    <string name="content_description_game_complete">Check mark signifying this game has been completed.</string>
    <string name="date_complete_prefix">Completed:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_app">Backlog</string>
    <string name="widget_currently_playing_label">Currently Playing:</string>
    <string name="appwidget_game_title_default">Nothing currently :\'(</string>
</resources>
