<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/appwidget_linear_layout"
        style="@style/AppWidgetSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appwidget_app_title"
            style="@style/AppWidgetLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_app" />


        <TextView
            android:id="@+id/appwidget_currently_playing_label"
            style="@style/AppWidgetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_currently_playing_label" />

        <TextView
            android:id="@+id/appwidget_currently_playing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appwidget_game_title_default" />


    </LinearLayout>

</RelativeLayout>