<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.StatisticsFragment">


    <TextView
        android:id="@+id/statistics_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/title_statistics"
        android:textSize="@dimen/title_fragment" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/stats_game_total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/stats_game_total_label"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/statistics_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stats_games_total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="@dimen/statistics_header"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="17" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="367dp" />

            <TextView
                android:id="@+id/stats_complete_total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/stats_complete_total_label"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/statistics_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stats_game_total_label" />

            <TextView
                android:id="@+id/stats_complete_total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="@dimen/statistics_header"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/stats_games_total_text_view"
                tools:text="17 (100%)" />

            <TextView
                android:id="@+id/stats_backlog_total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/stats_backlog_total_label"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/statistics_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stats_complete_total_label" />

            <TextView
                android:id="@+id/stats_backlog_total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="@dimen/statistics_header"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/stats_complete_total_text_view"
                tools:text="3" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>